--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "google-auth-library": "^10.5.0",
     "joi": "^17.12.2",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
